--- a/resultados.html
+++ b/resultados.html
@@ -264,38 +264,122 @@
     <div class="result-card">
       <div class="result-name">Edogawa Ranpo</div>
       <div class="result-user">@nuirdaj</div>
-      <div class="result-score">92 / 100</div>
-      <div class="result-status">Aprovado – Excelente desempenho</div>
+      <div class="result-score">100 / 100</div>
+      <div class="result-status">Aprovado – Perfeito</div>
     </div>
 
     <div class="result-card">
-      <div class="result-name">Yuigui</div>
-      <div class="result-user">@yuigui</div>
-      <div class="result-score">84 / 100</div>
-      <div class="result-status">Aprovado – Muito bom</div>
+      <div class="result-name">Mark Grayson</div>
+      <div class="result-user">@hardzinnn.</div>
+      <div class="result-score">73 / 100</div>
+      <div class="result-status">Aprovado – Bom</div>
     </div>
 
     <div class="result-card">
-      <div class="result-name">Akai</div>
-      <div class="result-user">@akai</div>
+      <div class="result-name">Minus</div>
+      <div class="result-user">@sad.atum</div>
+      <div class="result-score">68 / 100</div>
+      <div class="result-status">Aprovado – Desempenho Sólido</div>
+    </div>
+
+    <div class="result-card">
+      <div class="result-name">Fyodor Dostoevski</div>
+      <div class="result-user">@nuirdaj</div>
       <div class="result-score">76 / 100</div>
-      <div class="result-status">Aprovado – Desempenho sólido</div>
+      <div class="result-status">Aprovado – Bom</div>
     </div>
 
     <div class="result-card">
-      <div class="result-name">Kairo</div>
-      <div class="result-user">@kairo</div>
+      <div class="result-name">Sayuri Tamaki</div>
+      <div class="result-user">@_geo_5192</div>
+      <div class="result-score">88 / 100</div>
+      <div class="result-status">Aprovado – Muito Bom</div>
+    </div>
+
+    <div class="result-card">
+      <div class="result-name">Marvin</div>
+      <div class="result-user">@zumboti2_57909</div>
+      <div class="result-score">57 / 100</div>
+      <div class="result-status">Reprovado (AV2) – Desempenho Insuficiente</div>
+    </div>
+
+    <div class="result-card">
+      <div class="result-name">Evellyn</div>
+      <div class="result-user">@_geo_519</div>
       <div class="result-score">61 / 100</div>
-      <div class="result-status">Aprovado – Margem mínima</div>
+      <div class="result-status">Aprovado – Margem Mínima</div>
     </div>
 
     <div class="result-card">
-      <div class="result-name">Sayuri</div>
-      <div class="result-user">@sayuri</div>
-      <div class="result-score">48 / 100</div>
-      <div class="result-status">Reprovado – Solicitar acompanhamento</div>
+      <div class="result-name">Yu Hanying de Fenghua</div>
+      <div class="result-user">@user</div>
+      <div class="result-score">66 / 100</div>
+      <div class="result-status">Aprovado – Desempenho Sólido</div>
     </div>
 
+    <div class="result-card">
+      <div class="result-name">Guts</div>
+      <div class="result-user">@nuirdaj</div>
+      <div class="result-score">92 / 100</div>
+      <div class="result-status">Aprovado – Excelente Desempenho</div>
+    </div>
+
+  <div class="result-card">
+    <div class="result-name">Son Goku</div>
+    <div class="result-user">@user</div>
+    <div class="result-score">38 / 100</div>
+    <div class="result-status">Aprovado – Por Recomendação</div>
+  </div>
+
+  <div class="result-card">
+    <div class="result-name">Akai Ratsune</div>
+    <div class="result-user">@oromiluhh</div>
+    <div class="result-score">62 / 100</div>
+    <div class="result-status">Aprovado – Margem Mínima</div>
+  </div>
+
+  <div class="result-card">
+    <div class="result-name">Victor Kanjiryu</div>
+    <div class="result-user">@user</div>
+    <div class="result-score">62 / 100</div>
+    <div class="result-status">Aprovado – Margem Mínima</div>
+  </div>
+
+  <div class="result-card">
+    <div class="result-name">Chyba</div>
+    <div class="result-user">@davizino.</div>
+    <div class="result-score">53 / 100</div>
+    <div class="result-status">Reprovado (V2) – Abaixo da Margem Mínima</div>
+  </div>
+
+  <div class="result-card">
+    <div class="result-name">Nagan Lerond</div>
+    <div class="result-user">@binaryknigh</div>
+    <div class="result-score">50 / 100</div>
+    <div class="result-status">Aprovado – Por Recomendação</div>
+  </div>
+
+  <div class="result-card">
+    <div class="result-name">Miron Lerond</div>
+    <div class="result-user">@user</div>
+    <div class="result-score">58 / 100</div>
+    <div class="result-status">Aprovado – Por Recomendação</div>
+  </div>
+
+  <div class="result-card">
+    <div class="result-name">Raijin Hatsutori</div>
+    <div class="result-user">@blaackzinho</div>
+    <div class="result-score">67 / 100</div>
+    <div class="result-status">Aprovado – Desempenho Sólido</div>
+  </div>
+
+  <div class="result-card">
+    <div class="result-name">Achou sua nota injusta?</div>
+    <div class="result-user">Contate-nos!</div>
+    <div class="result-score">--------</div>
+    <div class="result-status">Informe a um professor/supervisor!</div>
+  </div>
+    
   </div>
 
   <a href="home.html" class="back-link">← Voltar para a página inicial</a>
@@ -321,3 +405,4 @@
 
 </body>
 </html>
+
