--- a/resultados.html
+++ b/resultados.html
@@ -139,6 +139,45 @@
       line-height: 1.5;
     }
 
+    /* Filtro de exame – botões */
+    .exam-filter {
+      text-align: center;
+      margin-bottom: 1.6rem;
+    }
+
+    .exam-toggle {
+      display: inline-flex;
+      padding: 0.18rem;
+      border-radius: 999px;
+      background: rgba(255,255,255,0.06);
+      border: 1px solid rgba(255,255,255,0.32);
+      box-shadow: 0 0 10px rgba(0,0,0,0.6);
+    }
+
+    .exam-btn {
+      border: none;
+      padding: 0.55rem 1.3rem;
+      border-radius: 999px;
+      background: transparent;
+      color: var(--ua-muted);
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+      cursor: pointer;
+      transition: 0.18s;
+    }
+
+    .exam-btn:hover {
+      background: rgba(255,255,255,0.06);
+      color: var(--ua-text);
+    }
+
+    .exam-btn.active {
+      background: var(--ua-gold);
+      color: #000;
+      box-shadow: 0 0 12px rgba(255,255,255,0.45);
+    }
+
     /* Busca */
     .search-box {
       margin-bottom: 1.6rem;
@@ -253,6 +292,15 @@
     Caso deseje solicitar revisão, contate o Setor de Avaliação.
   </div>
 
+  <!-- Seletor de exame (botões) -->
+  <div class="exam-filter">
+    <div class="exam-toggle">
+      <button class="exam-btn" data-exam-target="exam1">1º Exame</button>
+      <button class="exam-btn active" data-exam-target="exam2">2º Exame</button>
+      <button class="exam-btn" data-exam-target="final">Resultado Final</button>
+    </div>
+  </div>
+
   <!-- Busca -->
   <div class="search-box">
     <input type="text" id="searchInput" placeholder="Pesquisar candidato pelo nome ou usuário...">
@@ -260,126 +308,179 @@
 
   <div class="results-grid" id="resultsList">
 
-    <!-- EXEMPLOS -->
-    <div class="result-card">
+    <!-- Cada card = 1 candidato. 
+         data-score-exam1 = nota do 1º exame (0 por enquanto)
+         data-score-exam2 = nota do 2º exame
+         data-status-exam2 = texto específico do 2º exame
+    -->
+
+    <div class="result-card"
+         data-score-exam1="28"
+         data-score-exam2="100"
+         data-status-exam2="Aprovado – Perfeito">
       <div class="result-name">Edogawa Ranpo</div>
       <div class="result-user">@nuirdaj</div>
-      <div class="result-score">100 / 100</div>
-      <div class="result-status">Aprovado – Perfeito</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
     </div>
 
-    <div class="result-card">
+    <div class="result-card"
+         data-score-exam1="58"
+         data-score-exam2="73"
+         data-status-exam2="Aprovado – Bom">
       <div class="result-name">Mark Grayson</div>
       <div class="result-user">@hardzinnn.</div>
-      <div class="result-score">73 / 100</div>
-      <div class="result-status">Aprovado – Bom</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
     </div>
 
-    <div class="result-card">
+    <div class="result-card"
+         data-score-exam1="27"
+         data-score-exam2="68"
+         data-status-exam2="Aprovado – Desempenho Sólido">
       <div class="result-name">Minus</div>
       <div class="result-user">@sad.atum</div>
-      <div class="result-score">68 / 100</div>
-      <div class="result-status">Aprovado – Desempenho Sólido</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
     </div>
 
-    <div class="result-card">
+    <div class="result-card"
+         data-score-exam1="0"
+         data-score-exam2="76"
+         data-status-exam2="Aprovado – Bom">
       <div class="result-name">Fyodor Dostoevski</div>
       <div class="result-user">@nuirdaj</div>
-      <div class="result-score">76 / 100</div>
-      <div class="result-status">Aprovado – Bom</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
     </div>
 
-    <div class="result-card">
+    <div class="result-card"
+         data-score-exam1="0"
+         data-score-exam2="88"
+         data-status-exam2="Aprovado – Muito Bom">
       <div class="result-name">Sayuri Tamaki</div>
       <div class="result-user">@_geo_5192</div>
-      <div class="result-score">88 / 100</div>
-      <div class="result-status">Aprovado – Muito Bom</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
     </div>
 
-    <div class="result-card">
+    <div class="result-card"
+         data-score-exam1="0"
+         data-score-exam2="57"
+         data-status-exam2="Reprovado (AV2) – Desempenho Insuficiente">
       <div class="result-name">Marvin</div>
       <div class="result-user">@zumboti2_57909</div>
-      <div class="result-score">57 / 100</div>
-      <div class="result-status">Reprovado (AV2) – Desempenho Insuficiente</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
     </div>
 
-    <div class="result-card">
+    <div class="result-card"
+         data-score-exam1="0"
+         data-score-exam2="61"
+         data-status-exam2="Aprovado – Margem Mínima">
       <div class="result-name">Evellyn</div>
       <div class="result-user">@_geo_519</div>
-      <div class="result-score">61 / 100</div>
-      <div class="result-status">Aprovado – Margem Mínima</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
     </div>
 
-    <div class="result-card">
+    <div class="result-card"
+         data-score-exam1="19"
+         data-score-exam2="66"
+         data-status-exam2="Aprovado – Desempenho Sólido">
       <div class="result-name">Yu Hanying de Fenghua</div>
-      <div class="result-user">@user</div>
-      <div class="result-score">66 / 100</div>
-      <div class="result-status">Aprovado – Desempenho Sólido</div>
+      <div class="result-user">@mindlesskomeiji</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
     </div>
 
-    <div class="result-card">
+    <div class="result-card"
+         data-score-exam1="0"
+         data-score-exam2="92"
+         data-status-exam2="Aprovado – Excelente Desempenho">
       <div class="result-name">Guts</div>
       <div class="result-user">@nuirdaj</div>
-      <div class="result-score">92 / 100</div>
-      <div class="result-status">Aprovado – Excelente Desempenho</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
     </div>
 
-  <div class="result-card">
-    <div class="result-name">Son Goku</div>
-    <div class="result-user">@user</div>
-    <div class="result-score">38 / 100</div>
-    <div class="result-status">Aprovado – Por Recomendação</div>
-  </div>
+    <div class="result-card"
+         data-score-exam1="0"
+         data-score-exam2="38"
+         data-status-exam2="Aprovado – Por Recomendação">
+      <div class="result-name">Son Goku</div>
+      <div class="result-user">@siatszinho</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
 
-  <div class="result-card">
-    <div class="result-name">Akai Ratsune</div>
-    <div class="result-user">@oromiluhh</div>
-    <div class="result-score">62 / 100</div>
-    <div class="result-status">Aprovado – Margem Mínima</div>
-  </div>
+    <div class="result-card"
+         data-score-exam1="76"
+         data-score-exam2="62"
+         data-status-exam2="Aprovado – Margem Mínima">
+      <div class="result-name">Akai Ratsune</div>
+      <div class="result-user">@oromiluhh</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
 
-  <div class="result-card">
-    <div class="result-name">Victor Kanjiryu</div>
-    <div class="result-user">@user</div>
-    <div class="result-score">62 / 100</div>
-    <div class="result-status">Aprovado – Margem Mínima</div>
-  </div>
+    <div class="result-card"
+         data-score-exam1="0"
+         data-score-exam2="62"
+         data-status-exam2="Aprovado – Margem Mínima">
+      <div class="result-name">Victor Kanjiryu</div>
+      <div class="result-user">@hugoscar</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
 
-  <div class="result-card">
-    <div class="result-name">Chyba</div>
-    <div class="result-user">@davizino.</div>
-    <div class="result-score">53 / 100</div>
-    <div class="result-status">Reprovado (V2) – Abaixo da Margem Mínima</div>
-  </div>
+    <div class="result-card"
+         data-score-exam1="6"
+         data-score-exam2="53"
+         data-status-exam2="Reprovado (V2) – Abaixo da Margem Mínima">
+      <div class="result-name">Chyba</div>
+      <div class="result-user">@davizino.</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
 
-  <div class="result-card">
-    <div class="result-name">Nagan Lerond</div>
-    <div class="result-user">@binaryknigh</div>
-    <div class="result-score">50 / 100</div>
-    <div class="result-status">Aprovado – Por Recomendação</div>
-  </div>
+    <div class="result-card"
+         data-score-exam1="0"
+         data-score-exam2="50"
+         data-status-exam2="Aprovado – Por Recomendação">
+      <div class="result-name">Nagan Lerond</div>
+      <div class="result-user">@binaryknigh</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
 
-  <div class="result-card">
-    <div class="result-name">Miron Lerond</div>
-    <div class="result-user">@user</div>
-    <div class="result-score">58 / 100</div>
-    <div class="result-status">Aprovado – Por Recomendação</div>
-  </div>
+    <div class="result-card"
+         data-score-exam1="0"
+         data-score-exam2="58"
+         data-status-exam2="Aprovado – Por Recomendação">
+      <div class="result-name">Miron Lerond</div>
+      <div class="result-user">@binaryknight</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
 
-  <div class="result-card">
-    <div class="result-name">Raijin Hatsutori</div>
-    <div class="result-user">@blaackzinho</div>
-    <div class="result-score">67 / 100</div>
-    <div class="result-status">Aprovado – Desempenho Sólido</div>
-  </div>
+    <div class="result-card"
+         data-score-exam1="0"
+         data-score-exam2="67"
+         data-status-exam2="Aprovado – Desempenho Sólido">
+      <div class="result-name">Raijin Hatsutori</div>
+      <div class="result-user">@blaackzinho</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
 
-  <div class="result-card">
-    <div class="result-name">Achou sua nota injusta?</div>
-    <div class="result-user">Contate-nos!</div>
-    <div class="result-score">--------</div>
-    <div class="result-status">Informe a um professor/supervisor!</div>
-  </div>
-    
+    <div class="result-card">
+      <div class="result-name">Achou sua nota injusta?</div>
+      <div class="result-user">Contate-nos!</div>
+      <div class="result-score">--------</div>
+      <div class="result-status">Informe a um professor/supervisor!</div>
+    </div>
+
   </div>
 
   <a href="home.html" class="back-link">← Voltar para a página inicial</a>
@@ -391,18 +492,74 @@
   const resultsList = document.getElementById("resultsList");
   const cards = resultsList.getElementsByClassName("result-card");
 
-  searchInput.addEventListener("input", function () {
-    const filter = this.value.toLowerCase();
+  const examButtons = document.querySelectorAll(".exam-btn");
+  let currentExam = "exam2"; // começar pelo 2º exame
+
+  function applyFilters() {
+    const filter = (searchInput.value || "").toLowerCase();
 
     for (let card of cards) {
-      const name = card.querySelector(".result-name").textContent.toLowerCase();
-      const user = card.querySelector(".result-user").textContent.toLowerCase();
+      const nameEl = card.querySelector(".result-name");
+      const userEl = card.querySelector(".result-user");
+      const scoreEl = card.querySelector(".result-score");
+      const statusEl = card.querySelector(".result-status");
 
-      card.style.display = (name.includes(filter) || user.includes(filter)) ? "" : "none";
+      // card especial "Achou sua nota injusta?"
+      if (!nameEl || !userEl || !scoreEl || !statusEl) {
+        // esse a gente só filtra pelo texto, não mexe em nota
+        const text = card.textContent.toLowerCase();
+        card.style.display = text.includes(filter) ? "" : "none";
+        continue;
+      }
+
+      const name = nameEl.textContent.toLowerCase();
+      const user = userEl.textContent.toLowerCase();
+      const matchesText = name.includes(filter) || user.includes(filter);
+
+      if (!matchesText) {
+        card.style.display = "none";
+        continue;
+      }
+
+      const score1 = Number(card.dataset.scoreExam1 || 0);
+      const score2 = Number(card.dataset.scoreExam2 || 0);
+      let score;
+      let status;
+
+      if (currentExam === "exam1") {
+        score = score1;
+        status = `1º Exame – Nota ${score1}`;
+      } else if (currentExam === "exam2") {
+        score = score2;
+        status = card.dataset.statusExam2 || `2º Exame – Nota ${score2}`;
+      } else {
+        score = (score1 + score2) / 2;
+        status = "Média entre 1º e 2º Exame";
+      }
+
+      // formata nota (sem cortar decimais tipo 36.5)
+      scoreEl.textContent = `${score} / 100`;
+      statusEl.textContent = status;
+
+      card.style.display = "";
     }
+  }
+
+  // busca
+  searchInput.addEventListener("input", applyFilters);
+
+  // botões de exame
+  examButtons.forEach(btn => {
+    btn.addEventListener("click", () => {
+      currentExam = btn.dataset.examTarget;
+      examButtons.forEach(b => b.classList.toggle("active", b === btn));
+      applyFilters();
+    });
   });
+
+  // estado inicial: 2º exame
+  applyFilters();
 </script>
 
 </body>
 </html>
-
