--- a/resultados.html
+++ b/resultados.html
@@ -7,7 +7,7 @@
 
   <!-- Open Graph -->
   <meta property="og:title" content="U.A. High School – Resultados" />
-  <meta property="og:description" content="Resultados oficiais da Prova Teórica – 2ª Etapa." />
+  <meta property="og:description" content="Resultados oficiais do Exame da U.A" />
   <meta property="og:image" content="https://i.pinimg.com/736x/e8/57/3f/e8573fed4bd848b566383b0f0aa3b6fe.jpg" />
   <meta name="theme-color" content="#111111" />
 
@@ -288,7 +288,7 @@
   <h1>Resultados Oficiais – Exame da U.A.</h1>
 
   <div class="ua-alert">
-    ⚠ Os resultados abaixo refletem o desempenho oficial na Prova Teórica – 2ª Etapa.
+    ⚠ Os resultados abaixo refletem o desempenho oficial na Prova Teórica – 2ª Etapa e na Prova Física – 1ª Etapa.
     Caso deseje solicitar revisão, contate o Setor de Avaliação.
   </div>
 
@@ -317,7 +317,9 @@
     <div class="result-card"
          data-score-exam1="28"
          data-score-exam2="100"
-         data-status-exam2="Aprovado – Perfeito">
+         data-status-exam1="Aprovado – Desempenho Sólido"
+         data-status-exam2="Aprovado – Perfeito"
+         data-status-exam3="Aprovado">
       <div class="result-name">Edogawa Ranpo</div>
       <div class="result-user">@nuirdaj</div>
       <div class="result-score">0 / 100</div>
@@ -327,7 +329,9 @@
     <div class="result-card"
          data-score-exam1="58"
          data-score-exam2="73"
-         data-status-exam2="Aprovado – Bom">
+         data-status-exam1="Aprovado – Muito Bom"
+         data-status-exam2="Aprovado – Bom"
+         data-status-exam3="Aprovado">
       <div class="result-name">Mark Grayson</div>
       <div class="result-user">@hardzinnn.</div>
       <div class="result-score">0 / 100</div>
@@ -337,7 +341,9 @@
     <div class="result-card"
          data-score-exam1="27"
          data-score-exam2="68"
-         data-status-exam2="Aprovado – Desempenho Sólido">
+         data-status-exam1=""
+         data-status-exam2="Aprovado – Desempenho Sólido"
+         data-status-exam3="Aprovado">
       <div class="result-name">Minus</div>
       <div class="result-user">@sad.atum</div>
       <div class="result-score">0 / 100</div>
@@ -347,7 +353,9 @@
     <div class="result-card"
          data-score-exam1="0"
          data-score-exam2="76"
-         data-status-exam2="Aprovado – Bom">
+         data-status-exam1=""
+         data-status-exam2="Aprovado – Bom"
+         data-status-exam3="Aprovado">
       <div class="result-name">Fyodor Dostoevski</div>
       <div class="result-user">@nuirdaj</div>
       <div class="result-score">0 / 100</div>
@@ -357,7 +365,9 @@
     <div class="result-card"
          data-score-exam1="0"
          data-score-exam2="88"
-         data-status-exam2="Aprovado – Muito Bom">
+         data-status-exam1=""
+         data-status-exam2="Aprovado – Muito Bom"
+         data-status-exam3="Aprovado">
       <div class="result-name">Sayuri Tamaki</div>
       <div class="result-user">@_geo_5192</div>
       <div class="result-score">0 / 100</div>
@@ -367,7 +377,9 @@
     <div class="result-card"
          data-score-exam1="0"
          data-score-exam2="57"
-         data-status-exam2="Reprovado (AV2) – Desempenho Insuficiente">
+         data-status-exam1=""
+         data-status-exam2="Reprovado (AV2) – Desempenho Insuficiente"
+         data-status-exam3="Aprovado">
       <div class="result-name">Marvin</div>
       <div class="result-user">@zumboti2_57909</div>
       <div class="result-score">0 / 100</div>
@@ -377,7 +389,9 @@
     <div class="result-card"
          data-score-exam1="0"
          data-score-exam2="61"
-         data-status-exam2="Aprovado – Margem Mínima">
+         data-status-exam1=""
+         data-status-exam2="Aprovado - Margem Mínima"
+         data-status-exam3="Aprovado">
       <div class="result-name">Evellyn</div>
       <div class="result-user">@_geo_519</div>
       <div class="result-score">0 / 100</div>
@@ -387,7 +401,9 @@
     <div class="result-card"
          data-score-exam1="19"
          data-score-exam2="66"
-         data-status-exam2="Aprovado – Desempenho Sólido">
+         data-status-exam1=""
+         data-status-exam2="Aprovado - Desempenho Sólido"
+         data-status-exam3="Aprovado">
       <div class="result-name">Yu Hanying de Fenghua</div>
       <div class="result-user">@mindlesskomeiji</div>
       <div class="result-score">0 / 100</div>
@@ -397,7 +413,9 @@
     <div class="result-card"
          data-score-exam1="0"
          data-score-exam2="92"
-         data-status-exam2="Aprovado – Excelente Desempenho">
+         data-status-exam1=""
+         data-status-exam2="Aprovado - Excelente Desempenho"
+         data-status-exam3="Aprovado">
       <div class="result-name">Guts</div>
       <div class="result-user">@nuirdaj</div>
       <div class="result-score">0 / 100</div>
@@ -407,7 +425,9 @@
     <div class="result-card"
          data-score-exam1="0"
          data-score-exam2="38"
-         data-status-exam2="Aprovado – Por Recomendação">
+         data-status-exam1=""
+         data-status-exam2="Aprovado - Por Recomendação"
+         data-status-exam3="Aprovado">
       <div class="result-name">Son Goku</div>
       <div class="result-user">@siatszinho</div>
       <div class="result-score">0 / 100</div>
@@ -417,7 +437,9 @@
     <div class="result-card"
          data-score-exam1="76"
          data-score-exam2="62"
-         data-status-exam2="Aprovado – Margem Mínima">
+         data-status-exam1="Aprovado – Ótimo Desempenho"
+         data-status-exam2="Aprovado - Margem Mínima"
+         data-status-exam3="Aprovado">
       <div class="result-name">Akai Ratsune</div>
       <div class="result-user">@oromiluhh</div>
       <div class="result-score">0 / 100</div>
@@ -427,7 +449,9 @@
     <div class="result-card"
          data-score-exam1="0"
          data-score-exam2="62"
-         data-status-exam2="Aprovado – Margem Mínima">
+         data-status-exam1=""
+         data-status-exam2="Aprovado - Margem Mínima"
+         data-status-exam3="Aprovado">
       <div class="result-name">Victor Kanjiryu</div>
       <div class="result-user">@hugoscar</div>
       <div class="result-score">0 / 100</div>
@@ -437,7 +461,9 @@
     <div class="result-card"
          data-score-exam1="6"
          data-score-exam2="53"
-         data-status-exam2="Reprovado (V2) – Abaixo da Margem Mínima">
+         data-status-exam1=""
+         data-status-exam2="Reprovado (AV2) – Abaixo da Margem Mínima"
+         data-status-exam3="Aprovado">
       <div class="result-name">Chyba</div>
       <div class="result-user">@davizino.</div>
       <div class="result-score">0 / 100</div>
@@ -447,7 +473,9 @@
     <div class="result-card"
          data-score-exam1="0"
          data-score-exam2="50"
-         data-status-exam2="Aprovado – Por Recomendação">
+         data-status-exam1=""
+         data-status-exam2="Aprovado - Por Recomendação"
+         data-status-exam3="Aprovado">
       <div class="result-name">Nagan Lerond</div>
       <div class="result-user">@binaryknigh</div>
       <div class="result-score">0 / 100</div>
@@ -457,7 +485,9 @@
     <div class="result-card"
          data-score-exam1="0"
          data-score-exam2="58"
-         data-status-exam2="Aprovado – Por Recomendação">
+         data-status-exam1=""
+         data-status-exam2="Aprovado - Por Recomendação"
+         data-status-exam3="Aprovado">
       <div class="result-name">Miron Lerond</div>
       <div class="result-user">@binaryknight</div>
       <div class="result-score">0 / 100</div>
@@ -467,14 +497,19 @@
     <div class="result-card"
          data-score-exam1="0"
          data-score-exam2="67"
-         data-status-exam2="Aprovado – Desempenho Sólido">
+         data-status-exam1=""
+         data-status-exam2="Aprovado - Desempenho Sólido"
+         data-status-exam3="Aprovado">
       <div class="result-name">Raijin Hatsutori</div>
       <div class="result-user">@blaackzinho</div>
       <div class="result-score">0 / 100</div>
       <div class="result-status"></div>
     </div>
 
-    <div class="result-card">
+    <div class="result-card"
+         data-status-exam1="Informe a um professor/supervisor!"
+         data-status-exam2="Informe a um professor/supervisor!"
+         data-status-exam3="Informe a um professor/supervisor!">
       <div class="result-name">Achou sua nota injusta?</div>
       <div class="result-user">Contate-nos!</div>
       <div class="result-score">--------</div>
@@ -528,13 +563,13 @@
 
       if (currentExam === "exam1") {
         score = score1;
-        status = `1º Exame – Nota ${score1}`;
+        status = card.dataset.statusExam1 || `1º Exame – Nota ${score1}`;
       } else if (currentExam === "exam2") {
         score = score2;
         status = card.dataset.statusExam2 || `2º Exame – Nota ${score2}`;
       } else {
         score = (score1 + score2) / 2;
-        status = "Média entre 1º e 2º Exame";
+        status = card.dataset.statusExam3 || "Média entre 1º e 2º Exame";
       }
 
       // formata nota (sem cortar decimais tipo 36.5)
@@ -563,3 +598,4 @@
 
 </body>
 </html>
+
