--- a/ilu.html
+++ b/ilu.html
@@ -233,59 +233,22 @@
       color: var(--fg-soft);
       max-width: 45rem;
     }
-/* OLHO ILLUSION – estilo vigilância + blink */
-.eye-logo {
-  width: 46px;
-  height: 22px;
-  border: 2px solid #f5f5f5;
-  border-radius: 50% / 75%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
+.eye-video {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%; 
   overflow: hidden;
-  margin-right: 12px;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
+  margin-right: 14px;
+  border: 2px solid #f5f5f5;
+  box-shadow: 0 0 8px rgba(255,255,255,0.15);
 }
 
-/* fenda luminosa no centro (olho semicerrado) */
-.eye-slit {
-  width: 70%;
-  height: 6px;
-  background: #f5f5f5;
-  border-radius: 999px;
-  position: relative;
-  animation: eye-blink 4s infinite;
-  transform-origin: center;
+.eye-video video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-/* efeito de “scan” dentro do olho */
-.eye-slit::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: linear-gradient(
-    to right,
-    transparent 0%,
-    rgba(0, 0, 0, 0.4) 50%,
-    transparent 100%
-  );
-  mix-blend-mode: multiply;
-  opacity: 0.55;
-}
-
-/* animação de piscar */
-@keyframes eye-blink {
-  0%, 78%, 100% {
-    transform: scaleY(1);      /* olho semiaberto padrão */
-  }
-  82%, 86% {
-    transform: scaleY(0.1);    /* fecha (pisca) */
-  }
-  90% {
-    transform: scaleY(0.6);    /* abre um pouco mais depois */
-  }
-}
 
     .hero-body b {
       color: var(--fg);
@@ -538,18 +501,23 @@
   <div class="frame">
     <!-- HEADER -->
 <header>
-  <div class="brand">
-
-    <!-- OLHO ILLUSION -->
-    <div class="eye-logo">
-      <div class="eye-slit"></div>
+<div class="brand">
+    <!-- GIF/MP4 como logo -->
+    <div class="eye-video">
+        <video src="https://media.tenor.com/o0mvoouLlywAAAPo/pfp.mp4"
+               autoplay
+               loop
+               muted
+               playsinline></video>
     </div>
 
     <div class="brand-text">
-      <div class="brand-title">ILLUSION</div>
-      <div class="brand-sub">Divisão de Contenção & Resposta</div>
+        <div class="brand-title">ILLUSION</div>
+        <div class="brand-sub">Divisão de Contenção & Resposta</div>
     </div>
-  </div>
+</div>
+
+
 
   <nav>
     <a href="#painel">Painel</a>
