--- a/professores.html
+++ b/professores.html
@@ -308,6 +308,17 @@
         </div>
       </div>
 
+      <!-- Professor 7 -->
+      <div class="prof-card">
+        <div class="prof-img"><img src="elias.png"></div>
+        <div class="prof-name">Elias Ainsworth</div>
+        <div class="prof-role">Enfermagem</div>
+        <div class="prof-desc">
+          Instrutor de primeiros socorros e especialista em enfermagem. Cuida dos ferimentos de seus alunos e os ensina técnicas e procedimentos de resgate de civís e aliados. <br>
+          — "...Força bruta é algo simples. Reanimar alguém que está entre a vida e a morte... Isso sim é coragem de verdade..."
+        </div>
+      </div>
+
       <!-- Créditos -->
       <div class="prof-card">
         <div class="prof-img initial">J</div>
@@ -327,3 +338,4 @@
 
 </body>
 </html>
+
