--- a/ilu.html
+++ b/ilu.html
@@ -108,8 +108,8 @@
     }
 
     .eye-video {
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
       overflow: hidden;
       border: 2px solid #f5f5f5;
@@ -465,7 +465,6 @@
         <a href="laboratorios.html">Laboratórios</a>
         <a href="contato.html">Contato</a>
       </nav>
-      <div class="file-note">As páginas estão neste diretório: arquivos.html, operacoes.html, laboratorios.html e contato.html.</div>
     </header>
 
     <!-- HERO -->
@@ -473,9 +472,9 @@
       <article class="hero-main">
         <div class="hero-label">Acesso restrito Illusion</div>
         <h1 class="hero-title">Contenção de Anomalias</h1>
-        <p class="hero-subtitle">SCP Foundation? Não. Esta é a Illusion — corporação privada de inteligência.</p>
+        <p class="hero-subtitle">Esta é a Illusion - corporação privada de inteligência.</p>
         <p class="hero-body">
-          Uma empresa discreta que opera no mesmo nível de sigilo da Fundação, mas com recursos
+          Uma empresa com parceria direta com o governo, mas com recursos
           corporativos e liberdade de ação. Monitoramos fenômenos, <b>coletamos anomalias</b> e
           resolvemos crises antes que cheguem ao público ou aos heróis licenciados.
         </p>
@@ -540,7 +539,7 @@
     <!-- ARQUIVOS -->
     <section class="card" id="arquivos">
       <h2 class="card-title">Arquivos Classificados</h2>
-      <p class="card-sub">Rotas rápidas para os dossiês que mais imitam o formato da SCP Foundation, agora com marca Illusion.</p>
+      <p class="card-sub">Rotas rápidas para os dossiês.</p>
       <table class="table">
         <thead>
           <tr><th>Designação</th><th>Classe</th><th>Setor</th><th>Status</th></tr>
@@ -582,7 +581,7 @@
         <ul class="card-list">
           <li>Agência de Heróis do Japão (canal 7/13).</li>
           <li>Rede médica emergencial (MELD-02).</li>
-          <li>Laboratório ArkLight para contenção de quimeras.</li>
+          <li>Hyperion Eternal como parceria.</li>
         </ul>
       </article>
     </section>
@@ -590,7 +589,7 @@
     <!-- LABORATORIOS -->
     <section class="card" id="laboratorios">
       <h2 class="card-title">Laboratórios Illusion</h2>
-      <p class="card-sub">Páginas internas simuladas para pesquisa e engenharia reversa de anomalias.</p>
+      <p class="card-sub">Páginas internas para pesquisa e engenharia reversa de anomalias.</p>
       <div class="grid">
         <article class="card">
           <h3 class="card-title">Bioengenharia</h3>
@@ -637,6 +636,7 @@
         <div class="log-line"><span class="log-time">[23:45:27]</span><span class="log-tag">[INFO]</span>Canal seguro aberto para transmissão tática com agências locais.</div>
         <div class="log-line"><span class="log-time">[23:47:13]</span><span class="log-tag">[FIELD]</span>Relatório inicial indica presença de civis no raio de 400m do epicentro.</div>
         <div class="log-line"><span class="log-time">[23:49:40]</span><span class="log-tag">[CONTAIN]</span>Contenção provisória aplicada. Status: instável, monitoramento contínuo.</div>
+        <div class="log-line"><span class="log-time">[23:49:40]</span><span class="log-tag">[FINE]</span>Contenção total aplicada. Status: estável.</div>
         <div class="log-line"><span class="log-time">[23:52:08]</span><span class="log-tag">[NOTE]</span>Todos os registros deste console estão sujeitos à revisão da diretoria Illusion.</div>
       </div>
     </section>
@@ -649,16 +649,17 @@
         <ul class="card-list">
           <li>Canal seguro Q-Link: qlink://illusion.red/contato</li>
           <li>Rádio criptografado: frequência 133.7 MHz</li>
-          <li>Registro presencial: Átrio Beta, andar -02</li>
+          <li>Registro presencial: Átrio Beta, andar-02</li>
         </ul>
       </article>
       <article class="card">
         <h2 class="card-title">Recrutamento</h2>
-        <p class="card-sub">Profissionais acostumados à SCP Foundation se adaptam rápido aqui.</p>
+        <p class="card-sub">Profissionais de todas as areas se adaptam rápido aqui.</p>
         <ul class="card-list">
           <li>Analistas meméticos com clearance CL-03.</li>
           <li>Engenheiros em contenção eletromagnética.</li>
           <li>Médicos de trauma com experiência em campo.</li>
+          <li>Heróis, Vilões e Civis também são bem-vindos.</li>
         </ul>
       </article>
       <article class="card">
@@ -674,7 +675,7 @@
 
     <!-- FOOTER -->
     <footer>
-      <div class="timecode">▶ 00:12:09 • Illusion Tape // VHS Source</div>
+      <div class="timecode">▶ 00:12:09 • Illusion Tape // VHS Source 89</div>
       <div class="badge">Illusion • Uso interno apenas</div>
     </footer>
   </div>
